Add Node Template Generator (basic)

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -137,7 +137,7 @@
   --color-primary-900: #0e6030;
   --color-primary-950: #023618;
 }
-
+/*
 .react-flow__pane {
   cursor: none !important;
 }
@@ -152,4 +152,4 @@
 }
 .react-flow__edge {
   cursor: none !important;
-}
+}*/
